--- a/HenryMod/HenryMod.csproj
+++ b/HenryMod/HenryMod.csproj
@@ -1,7 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Configurations>Release;Debug</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -16,6 +17,18 @@
     <None Remove="HenryBank.bnk" />
     <None Remove="Modules\Characters\Henry.cs~RF6221a098.TMP" />
     <None Remove="myassetbundle" />
+    <None Remove="Content\Henry\" />
+    <None Remove="Content\Henry\Achievements\" />
+    <None Remove="Content\Henry\Content\" />
+    <None Remove="Characters\Survivors\" />
+    <None Remove="Characters\Survivors\Henry\" />
+    <None Remove="BaseContent\" />
+    <None Remove="Modules\Characters\" />
+    <None Remove="Characters\Survivors\Henry\SkillStates\" />
+    <None Remove="BaseContent\BaseStates\" />
+    <None Remove="BaseContent\Unlocks\" />
+    <None Remove="Characters\Survivors\Henry\Components\" />
+    <None Remove="RoR2-nstrip" />
   </ItemGroup>
 
 	<ItemGroup>
@@ -24,24 +37,32 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="BepInEx.Core" Version="5.4.19" />
-		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.1-r.1" />
+		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.4-r.0" />
 		<PackageReference Include="UnityEngine.Modules" Version="2019.4.26" />
+		<PackageReference Include="MMHOOK.RoR2" Version="2022.9.20">
+			<NoWarn>NU1701</NoWarn>
+		</PackageReference>
+		<PackageReference Include="R2API.Core" Version="5.0.3" />
+		<PackageReference Include="R2API.Prefab" Version="1.0.1" />
+		<PackageReference Include="R2API.RecalculateStats" Version="1.0.0" />
+		<PackageReference Include="R2API.Language" Version="1.0.0" />
+		<PackageReference Include="R2API.Unlockable" Version="1.0.0" />
+		<PackageReference Include="R2API.DamageType" Version="1.0.0" />
+		<PackageReference Include="R2API.Sound" Version="1.0.0" />
+
 	</ItemGroup>
-	
-  <ItemGroup>
-    <EmbeddedResource Include="HenryBank.bnk" />
-    <EmbeddedResource Include="myassetbundle" />
-  </ItemGroup>
+
 
   <ItemGroup>
-    <Reference Include="R2API">
-      <HintPath>..\libs\R2API.dll</HintPath>
-    </Reference>
-    <Reference Include="MMHOOK_RoR2">
-      <HintPath>..\libs\MMHOOK_RoR2.dll</HintPath>
-    </Reference>
+    <Folder Include="Characters\Survivors\" />
+    <Folder Include="Characters\Survivors\Henry\" />
+    <Folder Include="BaseContent\" />
+    <Folder Include="Modules\Characters\" />
+    <Folder Include="Characters\Survivors\Henry\SkillStates\" />
+    <Folder Include="BaseContent\BaseStates\" />
+    <Folder Include="BaseContent\Unlocks\" />
+    <Folder Include="Characters\Survivors\Henry\Components\" />
   </ItemGroup>
-
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="if &quot;$(Username)&quot; == &quot;MyPCUsername(don't dox yourself)&quot; copy &quot;$(TargetPath)&quot; &quot;C:\[PATH_TO_MY_R2MODMAN_PROFILE]\BepInEx\plugins&quot;" />
   </Target>
