--- a/HenryUnityProject/Packages/manifest.json
+++ b/HenryUnityProject/Packages/manifest.json
@@ -1,14 +1,11 @@
 {
   "dependencies": {
-    "com.unity.addressables": "1.16.19",
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.ide.rider": "1.1.4",
+    "com.passivepicasso.thunderkit": "https://github.com/PassivePicasso/ThunderKit.git#8.0.3",
+    "com.unity.assetbundlebrowser": "1.7.0",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.multiplayer-hlapi": "1.0.8",
-    "com.unity.test-framework": "1.1.22",
     "com.unity.textmeshpro": "2.1.1",
-    "com.unity.timeline": "1.2.18",
     "com.unity.ugui": "1.0.0",
+    "riskofthunder-ror2importextensions": "https://github.com/risk-of-thunder/RoR2ImportExtensions.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
