--- a/HenryMod/HenryMod.csproj
+++ b/HenryMod/HenryMod.csproj
@@ -18,19 +18,19 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="BepInEx.Core" Version="5.4.19" />
+		<PackageReference Include="BepInEx.Core" Version="5.4.*" />
 		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.4-r.0" />
 		<PackageReference Include="UnityEngine.Modules" Version="2019.4.26" />
 		<PackageReference Include="MMHOOK.RoR2" Version="2022.9.20">
 			<NoWarn>NU1701</NoWarn>
 		</PackageReference>
-		<PackageReference Include="R2API.Core" Version="5.0.3" />
-		<PackageReference Include="R2API.Prefab" Version="1.0.1" />
-		<PackageReference Include="R2API.RecalculateStats" Version="1.0.0" />
-		<PackageReference Include="R2API.Language" Version="1.0.0" />
-		<PackageReference Include="R2API.Unlockable" Version="1.0.0" />
-		<PackageReference Include="R2API.DamageType" Version="1.0.0" />
-		<PackageReference Include="R2API.Sound" Version="1.0.0" />
+		<PackageReference Include="R2API.Core" Version="5.*" />
+		<PackageReference Include="R2API.Prefab" Version="1.*" />
+		<PackageReference Include="R2API.RecalculateStats" Version="1.*" />
+		<PackageReference Include="R2API.Language" Version="1.*" />
+		<PackageReference Include="R2API.Unlockable" Version="1.*" />
+		<PackageReference Include="R2API.DamageType" Version="1.*" />
+		<PackageReference Include="R2API.Sound" Version="1.*" />
 	</ItemGroup>
 
 
